--- a/views/macros.njk
+++ b/views/macros.njk
@@ -96,6 +96,7 @@ which allows this macro to be reused to create dropdown or radiobutton filters
          <span class="{{elementStyle}} tag is-high-vuln">High</span>
          <span class="{{elementStyle}} tag is-medium-vuln">Medium</span>
          <span class="{{elementStyle}} tag is-low-vuln">Low</span>
+         <span class="{{elementStyle}} tag is-clear-vuln">Clear</span>
          <span class="{{elementStyle}} tag">Components</span>
       </div>
 </div>
